--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="option-buttons" id="optionButtons" style="display: none;">
             <button onclick="redirectToUrl('https://msearch.shopping.naver.com/search/all?adQuery=%EC%A0%91%EC%9D%B4%EC%8B%9D%EC%82%AC%EB%8B%A4%EB%A6%AC&maxPrice=86700&minPrice=86700&origQuery=%EC%A0%91%EC%9D%B4%EC%8B%9D%EC%82%AC%EB%8B%A4%EB%A6%AC&pagingIndex=1&pagingSize=40&productSet=total&query=%EC%A0%91%EC%9D%B4%EC%8B%9D%EC%82%AC%EB%8B%A4%EB%A6%AC&sort=rel&viewType=list')">💫쭉~늘어나는 안테나 사다리</button>
             <button onclick="redirectToUrl('https://msearch.shopping.naver.com/search/all?adQuery=%EB%AC%BC%ED%98%B8%EC%8A%A4&maxPrice=52500&minPrice=52500&naverPay=true&origQuery=%EB%AC%BC%ED%98%B8%EC%8A%A4&pagingIndex=1&pagingSize=40&query=%EB%AC%BC%ED%98%B8%EC%8A%A4&sort=rel&spec=M10022634%7CM10589853&viewType=list')">💋호스릴 디자인이 이정도는 되야지!</button>
-            <button onclick="redirectToUrl('https://search.shopping.naver.com/ns/search?query=%EC%83%A4%EC%9B%8C%EA%B8%B0%ED%97%A4%EB%93%9C%20%EC%A0%88%EC%88%98%ED%98%95&prevQuery=%EC%83%A4%EC%9B%8C%EA%B8%B0%ED%97%A4%EB%93%9C&priceRange=15900%7C15900')">😲샤워하는데 아직도 이게 없어?</button>
+            <button onclick="redirectToUrl('https://www.coupang.com/vp/products/8628244373')">😲샤워하는데 아직도 이게 없어?</button>
         </div>
     </div>
 
